--- a/project/src/index.css
+++ b/project/src/index.css
@@ -1,3 +1,19 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+    .btn-nav-s {
+        @apply w-12 h-12 hover:bg-slate-200 flex justify-center items-center cursor-pointer;
+    }
+
+    .btn-nav-m {
+        @apply h-12 w-20 px-2 hover:bg-slate-200 flex justify-center items-center cursor-pointer;
+    }
+
+}
+
+
 body {
     font-family: 'Roboto', sans-serif;
 }
